# anfconv

./: .gitignore  CMakeLists.txt  IndraConfig.cmake.in  LICENSE  README.md  readme.anf.out  setup.sh
anf_tests/: README.md  anf_simp.anf  el.anf  el.anf.out  fixed.anf  gj.anf  gj.anf.out  lit.cfg  not_eaten.anf  not_eaten2.anf  not_eaten2.anf.out  xl.anf
espresso/: CMakeLists.txt
examples/: readme.anf
src/: CMakeLists.txt  GitSHA1.h  anf.cpp  anf.h  clauses.h  cnf.cpp  cnf.h  configdata.h  evaluator.h  gaussjordan.h  karnaugh.cpp  karnaugh.h  main.cpp  replacer.cpp  replacer.h  satsolve.cpp  satsolve.h  simplifybysat.cpp  simplifybysat.h  time_mem.h  types.h
tests/: el.anf  fixed.anf  gj.anf  lit.cfg  not_eaten2.anf  xl.anf
tests/Output/: anf_prop.anf.script  el.anf.script  fixed.anf.script  gj.anf.script  not_eaten.anf.script  not_eaten2.anf.script  xl.anf.script
